--- a/index.html
+++ b/index.html
@@ -191,6 +191,30 @@ textarea{
     <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
   </div>
 
+<div class="card" style="margin-top:10px;">
+  <h2>Why NOVAK — Why Now?</h2>
+  <p style="margin-top:10px; font-size:15px; line-height:1.55;">
+    Today, automated systems approve loans, deny medical claims, adjust insurance rates,
+    steer vehicles, filter veterans' benefits, control robots, and move billions of dollars —
+    often <strong>without proof, transparency, or accountability.</strong>
+  </p>
+
+  <p style="margin-top:12px; font-size:15px; line-height:1.55;">
+    NOVAK ensures every automated action — in government, healthcare, finance, defense,
+    and AI — must generate cryptographic proof of legality <strong>before it happens.</strong>
+  </p>
+
+  <p style="margin-top:12px; font-size:15px; line-height:1.55;">
+    If the data changes, a rule is wrong, or manipulation occurs, NOVAK detects it instantly
+    and <strong>blocks the action safely.</strong>
+  </p>
+
+  <p style="margin-top:12px; font-size:15px; line-height:1.55; font-weight:600;">
+    No blockchain. No cryptocurrency. No central server. Just mathematical integrity.
+  </p>
+</div>
+
+ 
   <!-- Executive Description -->
   <p id="description" style="font-size:15px;margin-bottom:20px;">
     NOVAK generates a mathematical fingerprint of data. If anything changes—even slightly—the fingerprint changes instantly. Try it below.
@@ -208,6 +232,19 @@ textarea{
   <!-- SHOW ME HOW THIS WORKS -->
   <button class="action-btn" onclick="startGuide()">Show Me How This Works</button>
 
+<div class="card" style="border-left:6px solid var(--blue);">
+  <strong>The simplest way to understand NOVAK:</strong>
+  <p style="margin-top:10px; font-size:15px; line-height:1.55;">
+    Type a sentence below — like “Payment amount: $200.”
+    Now change it to “$220.”
+  </p>
+
+  <p style="margin-top:10px; font-size:15px; line-height:1.55;">
+    Every fingerprint changes instantly. NOVAK sees <strong>even a one-character change</strong>.
+    That’s how tampering, fraud, or system errors become impossible to hide.
+  </p>
+</div>
+ 
   <!-- INSTRUCTION BANNER (hidden until clicked) -->
   <div id="instructionBanner" class="card">
     <strong>How to use this demo:</strong>
