--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@ textarea{
 
   <p style="margin-top:12px; font-size:15px; line-height:1.55; font-weight:600;">
     No blockchain. No cryptocurrency. No central server. Just mathematical integrity.
+    ✅ Every input generates a unique fingerprint.  
+    ✅ Change anything — the fingerprint changes instantly.  
   </p>
 
 </div>
