--- a/index.html
+++ b/index.html
@@ -212,9 +212,13 @@ textarea{
   <p style="margin-top:12px; font-size:15px; line-height:1.55; font-weight:600;">
     No blockchain. No cryptocurrency. No central server. Just mathematical integrity.
     ✅ Every input generates a unique fingerprint.  
-    ✅ Change anything — the fingerprint changes instantly.  
+    ✅ Change anything — the fingerprint changes instantly.
   </p>
 
+<p style="font-size:15px; opacity:.85; margin-top:14px;">
+  SHA-256 is the steel the NSA engineered — NOVAK is the vault that ensures automation can’t act without proof.
+</p>
+ 
 </div>
 
 <br><br>
