--- a/index.html
+++ b/index.html
@@ -179,6 +179,17 @@ textarea{
 .action-btn:hover{
  background:var(--blue-hover);
 }
+
+    /* ✅ Add this anywhere inside your style block */
+    .hash-list {
+      font-size: 0.82rem;
+      line-height: 1.35;
+    }
+
+    .hash-value {
+      overflow-wrap: anywhere;
+    }
+ 
 </style>
 </head>
 
