--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=JetBrains+Mono&display=swap" rel="stylesheet" />
 
 <style>
+
+ /* Scrollable history container */
+.history-box {
+  max-height: 240px;      /* adjust if you want taller/shorter */
+  overflow-y: auto;
+  padding: 12px 16px;
+  border: 1px solid #d0d7de;
+  background: #f6f8fa;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+  font-size: 0.85rem;
+  white-space: pre-line;
+  border-radius: 6px;
+}
+
+/* Dark mode compatibility */
+.dark .history-box {
+  background: #0d1117;
+  border-color: #30363d;
+  color: #e6edf3;
+}
+
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
 /* THEME COLORS */
@@ -337,7 +358,7 @@ textarea{
   <!-- TIMELINE -->
   <div class="card" id="timelineCard">
     <h3 id="timelineHeader">Proof History</h3>
-    <div id="timeline" class="timeline"></div>
+    <div id="proofHistory" class="history-box"></div>
   </div>
 
   <!-- NOVAK VS BLOCKCHAIN EXPLAINER -->
