--- a/index.html
+++ b/index.html
@@ -9,208 +9,284 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=JetBrains+Mono&display=swap" rel="stylesheet" />
 
 <style>
-
- /* Scrollable history container */
-.history-box {
-  max-height: 240px;      /* adjust if you want taller/shorter */
-  overflow-y: auto;
-  padding: 12px 16px;
-  border: 1px solid #d0d7de;
-  background: #f6f8fa;
-  font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-  font-size: 0.85rem;
-  white-space: pre-line;
-  border-radius: 6px;
-}
-
-/* Dark mode compatibility */
-.dark .history-box {
-  background: #0d1117;
-  border-color: #30363d;
-  color: #e6edf3;
-}
-
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
 /* THEME COLORS */
 :root{
- --blue:#1a4fb3;
- --blue-hover:#0f357f;
- --bg-light:#f8fafc;
- --bg-dark:#0f172a;
- --text-light:#0b1326;
- --text-dark:#e6edf5;
- --card-light:#ffffff;
- --card-dark:#1e293b;
- --border-light:#d4d8e1;
- --border-dark:#334155;
+  --blue:#1a4fb3;
+  --blue-hover:#0f357f;
+  --bg-light:#f8fafc;
+  --bg-dark:#0f172a;
+  --text-light:#0b1326;
+  --text-dark:#e6edf5;
+  --card-light:#ffffff;
+  --card-dark:#1e293b;
+  --border-light:#d4d8e1;
+  --border-dark:#334155;
 }
 
 html[data-theme="light"]{
- --bg:var(--bg-light);
- --text:var(--text-light);
- --card:var(--card-light);
- --border:var(--border-light);
+  --bg:var(--bg-light);
+  --text:var(--text-light);
+  --card:var(--card-light);
+  --border:var(--border-light);
 }
 html[data-theme="dark"]{
- --bg:var(--bg-dark);
- --text:var(--text-dark);
- --card:var(--card-dark);
- --border:var(--border-dark);
+  --bg:var(--bg-dark);
+  --text:var(--text-dark);
+  --card:var(--card-dark);
+  --border:var(--border-dark);
 }
 
 body{
- background:var(--bg);
- color:var(--text);
- padding:36px;
+  background:var(--bg);
+  color:var(--text);
+  padding:36px;
 }
 
 .container{max-width:960px;margin:auto}
 
 /* HEADER */
 .header{
- display:flex;
- justify-content:space-between;
- align-items:center;
- margin-bottom:16px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:16px;
 }
 .logo{
- font-size:34px;
- font-weight:700;
- color:var(--blue);
+  font-size:34px;
+  font-weight:700;
+  color:var(--blue);
 }
 
 /* THEME TOGGLE */
 .theme-toggle{
- cursor:pointer;
- font-size:14px;
- border:1px solid var(--blue);
- padding:6px 12px;
- border-radius:6px;
- color:var(--blue);
- background:transparent;
- transition:.25s;
+  cursor:pointer;
+  font-size:14px;
+  border:1px solid var(--blue);
+  padding:6px 12px;
+  border-radius:6px;
+  color:var(--blue);
+  background:transparent;
+  transition:.25s;
 }
 .theme-toggle:hover{
- background:var(--blue);
- color:white;
+  background:var(--blue);
+  color:white;
 }
 
 /* AUDIENCE NAV */
 .nav{
- display:flex;
- justify-content:center;
- flex-wrap:wrap;
- gap:12px;
- margin:22px 0;
+  display:flex;
+  justify-content:center;
+  flex-wrap:wrap;
+  gap:12px;
+  margin:22px 0;
 }
 .nav button{
- border:1px solid var(--blue);
- background:transparent;
- padding:8px 16px;
- border-radius:6px;
- font-size:14px;
- cursor:pointer;
- transition:.25s;
- color:var(--blue);
+  border:1px solid var(--blue);
+  background:transparent;
+  padding:8px 16px;
+  border-radius:6px;
+  font-size:14px;
+  cursor:pointer;
+  transition:.25s;
+  color:var(--blue);
 }
 .nav button.active,
 .nav button:hover{
- background:var(--blue);
- color:white;
+  background:var(--blue);
+  color:white;
 }
 
 /* CARD */
 .card{
- background:var(--card);
- border:1px solid var(--border);
- border-radius:10px;
- padding:22px;
- margin-top:24px;
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:10px;
+  padding:22px;
+  margin-top:24px;
 }
 
 /* DISMISSIBLE ONBOARDING */
 #instructionBanner{
- border-left:6px solid var(--blue);
- display:none;
+  border-left:6px solid var(--blue);
+  display:none;
 }
 
 /* EXAMPLES */
 .example-grid{
- display:grid;
- grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
- gap:18px;
- margin-top:14px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
+  gap:18px;
+  margin-top:14px;
 }
 .example{
- border:1px solid var(--border);
- padding:14px;
- border-radius:8px;
- cursor:pointer;
- transition:.25s;
- background:var(--card);
- font-size:14px;
+  border:1px solid var(--border);
+  padding:14px;
+  border-radius:8px;
+  cursor:pointer;
+  transition:.25s;
+  background:var(--card);
+  font-size:14px;
 }
 .example:hover{
- background:rgba(26,79,179,.08);
- border-color:var(--blue);
+  background:rgba(26,79,179,.08);
+  border-color:var(--blue);
 }
 
 /* TEXT INPUT */
 textarea{
- width:100%;
- height:170px;
- border:1px solid var(--border);
- border-radius:6px;
- padding:12px;
- background:transparent;
- font-family:"JetBrains Mono",monospace;
- font-size:14px;
- color:var(--text);
- resize:vertical;
+  width:100%;
+  height:170px;
+  border:1px solid var(--border);
+  border-radius:6px;
+  padding:12px;
+  background:transparent;
+  font-family:"JetBrains Mono",monospace;
+  font-size:14px;
+  color:var(--text);
+  resize:vertical;
 }
 
 /* DROPZONE */
 .dropzone{
- margin-top:18px;
- border:2px dashed var(--blue);
- padding:36px;
- text-align:center;
- border-radius:10px;
- cursor:pointer;
- transition:.22s;
+  margin-top:18px;
+  border:2px dashed var(--blue);
+  padding:36px;
+  text-align:center;
+  border-radius:10px;
+  cursor:pointer;
+  transition:.22s;
 }
 .dropzone:hover{
- background:rgba(26,79,179,.07);
+  background:rgba(26,79,179,.07);
 }
 
 /* BUTTONS */
 .action-btn{
- margin-top:14px;
- margin-right:8px;
- padding:8px 16px;
- border-radius:6px;
- border:none;
- cursor:pointer;
- background:var(--blue);
- color:white;
- font-size:14px;
- transition:.25s;
+  margin-top:14px;
+  margin-right:8px;
+  padding:8px 16px;
+  border-radius:6px;
+  border:none;
+  cursor:pointer;
+  background:var(--blue);
+  color:white;
+  font-size:14px;
+  transition:.25s;
 }
 .action-btn:hover{
- background:var(--blue-hover);
+  background:var(--blue-hover);
 }
 
-    /* ✅ Add this anywhere inside your style block */
-    .hash-list {
-      font-size: 0.82rem;
-      line-height: 1.35;
-    }
+/* HASH LIST + ROWS */
+.hash-list{
+  font-size:0.82rem;
+  line-height:1.35;
+}
 
-    .hash-value {
-      overflow-wrap: anywhere;
-    }
- 
+.hash-row{
+  display:flex;
+  align-items:flex-start;
+  justify-content:space-between;
+  padding:6px 0;
+  border-bottom:1px solid var(--border);
+  gap:8px;
+}
+
+.hash-label{
+  width:80px;
+  font-weight:600;
+  font-family:"JetBrains Mono",monospace;
+  margin-top:2px;
+}
+
+.hash-value{
+  overflow-wrap:anywhere;
+  flex:1;
+  font-family:"JetBrains Mono",monospace;
+}
+
+.hash-controls{
+  display:flex;
+  flex-direction:column;
+  gap:4px;
+  align-items:flex-end;
+}
+
+.copy{
+  padding:3px 8px;
+  font-size:11px;
+  border-radius:5px;
+  border:none;
+  cursor:pointer;
+  background:var(--blue);
+  color:white;
+}
+
+/* RGAC */
+.rgac{
+  display:flex;
+  flex-wrap:wrap;
+  gap:6px;
+  margin-top:8px;
+}
+.rgac .block{
+  border:1px solid var(--blue);
+  border-radius:5px;
+  padding:4px 8px;
+  font-family:"JetBrains Mono",monospace;
+  font-size:11px;
+}
+
+/* BEFORE/AFTER */
+.compare-box{
+  border:1px solid var(--border);
+  border-radius:8px;
+  padding:10px;
+  font-family:"JetBrains Mono",monospace;
+  font-size:0.8rem;
+  max-height:220px;
+  overflow-y:auto;
+}
+.compare-row{
+  display:grid;
+  grid-template-columns:90px 1fr 1fr;
+  gap:6px;
+  padding:4px 0;
+  border-bottom:1px dashed var(--border);
+}
+.compare-label{font-weight:600;}
+.compare-before{color:#64748b;}
+.compare-after{}
+
+/* Scrollable history container */
+.history-box{
+  max-height:240px;
+  overflow-y:auto;
+  padding:12px 16px;
+  border:1px solid #d0d7de;
+  background:#f6f8fa;
+  font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;
+  font-size:0.85rem;
+  white-space:pre-line;
+  border-radius:6px;
+}
+
+/* Dark mode compatibility for history */
+html[data-theme="dark"] .history-box{
+  background:#0d1117;
+  border-color:#30363d;
+  color:#e6edf3;
+}
+
+/* Simple “I still don’t get it” explainer */
+#simpleExplain{
+  display:none;
+  margin-top:16px;
+  border-left:4px solid var(--blue);
+}
 </style>
 </head>
 
@@ -223,47 +299,71 @@ textarea{
     <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
   </div>
 
-<div class="card" style="margin-top:10px;">
-  <h2>Why NOVAK — Why Now?</h2>
-  <p style="margin-top:10px; font-size:15px; line-height:1.55;">
-    Today, automated systems approve loans, deny medical claims, adjust insurance rates,
-    steer vehicles, filter veterans' benefits, control robots, and move billions of dollars —
-    often <strong>without proof, transparency, or accountability.</strong>
-  </p>
+  <!-- WHY NOVAK -->
+  <div class="card" style="margin-top:10px;">
+    <h2>Why NOVAK — Why Now?</h2>
+    <p style="margin-top:10px; font-size:15px; line-height:1.55;">
+      Today, automated systems approve loans, deny medical claims, adjust insurance rates,
+      steer vehicles, filter veterans' benefits, control robots, and move billions of dollars —
+      often <strong>without proof, transparency, or accountability.</strong>
+    </p>
 
-  <p style="margin-top:12px; font-size:15px; line-height:1.55;">
-    NOVAK ensures every automated action — in government, healthcare, finance, defense,
-    and AI — must generate cryptographic proof of legality <strong>before it happens.</strong>
-  </p>
+    <p style="margin-top:12px; font-size:15px; line-height:1.55;">
+      NOVAK ensures every automated action — in government, healthcare, finance, defense,
+      and AI — must generate cryptographic proof of legality <strong>before it happens.</strong>
+    </p>
 
-  <p style="margin-top:12px; font-size:15px; line-height:1.55;">
-    If the data changes, a rule is wrong, or manipulation occurs, NOVAK detects it instantly
-    and <strong>blocks the action safely.</strong>
-  </p>
+    <p style="margin-top:12px; font-size:15px; line-height:1.55;">
+      If the data changes, a rule is wrong, or manipulation occurs, NOVAK detects it instantly
+      and <strong>blocks the action safely.</strong>
+    </p>
 
-  <p style="margin-top:12px; font-size:15px; line-height:1.55; font-weight:600;">
-    No blockchain. No cryptocurrency. No central server. Just mathematical integrity.
-     </p>
-   <p style="margin-top:12px; font-size:15px; line-height:1.55; font-weight:600;">
-    ✅ Every input generates a unique fingerprint.
-      </p>
-      <p style="margin-top:12px; font-size:15px; line-height:1.55; font-weight:600;">
-    ✅ Change anything — the fingerprint changes instantly.
-  </p>
+    <p style="margin-top:12px; font-size:15px; line-height:1.55; font-weight:600;">
+      No blockchain. No cryptocurrency. No central server. Just mathematical integrity.
+    </p>
 
-<p style="font-size:15px; opacity:.85; margin-top:14px;">
-  SHA-256 is the steel the NSA engineered — NOVAK is the vault that ensures automation can’t act without proof.
-</p>
- 
-</div>
+    <p style="margin-top:12px; font-size:15px; line-height:1.55;">
+      ✅ Every input generates a unique fingerprint.<br>
+      ✅ Change anything — the fingerprint changes instantly.
+    </p>
 
-<br><br>
-   <!-- Executive Description -->
-  <p id="description" style="font-size:15px;margin-bottom:20px;">
+    <p style="font-size:15px; opacity:.85; margin-top:14px;">
+      SHA-256 is the steel the NSA engineered — NOVAK is the vault that ensures automation can’t act without proof.
+    </p>
+  </div>
+
+  <br><br>
+
+  <!-- Executive Description -->
+  <p id="description" style="font-size:15px;margin-bottom:12px;">
     NOVAK generates a mathematical fingerprint of data. If anything changes—even slightly—the fingerprint changes instantly. Try it below.
   </p>
- 
-   <!-- Audience Selector -->
+
+  <!-- “I still don’t get it” button -->
+  <button class="action-btn" style="margin-bottom:10px;" onclick="toggleSimpleExplain()">
+    I still don’t get it
+  </button>
+
+  <!-- Super simple explainer -->
+  <div id="simpleExplain" class="card">
+    <h3>Okay, super simple version 👇</h3>
+    <p style="margin-top:10px;font-size:15px;line-height:1.55;">
+      Imagine you take a picture of a puzzle when it’s correct. That picture is your
+      <strong>hash</strong> — a special fingerprint made from the data.
+    </p>
+    <p style="margin-top:10px;font-size:15px;line-height:1.55;">
+      If someone even nudges one puzzle piece, the new picture looks different.
+      NOVAK keeps checking the “picture” of your data. If anything moves — even
+      one tiny piece — NOVAK sees it and says:
+      <strong>“Stop. Something changed. Prove this is still allowed.”</strong>
+    </p>
+    <p style="margin-top:10px;font-size:15px;line-height:1.55;">
+      The steel (SHA-256) already exists. NOVAK is the vault door that refuses to open
+      unless everything matches.
+    </p>
+  </div>
+
+  <!-- Audience Selector -->
   <div class="nav">
     <button onclick="setAudience('public')" class="active" id="btn-public">Public</button>
     <button onclick="setAudience('government')" id="btn-government">Government</button>
@@ -275,19 +375,20 @@ textarea{
   <!-- SHOW ME HOW THIS WORKS -->
   <button class="action-btn" onclick="startGuide()">Show Me How This Works</button>
 
-<div class="card" style="border-left:6px solid var(--blue);">
-  <strong>The simplest way to understand NOVAK:</strong>
-  <p style="margin-top:10px; font-size:15px; line-height:1.55;">
-    Type a sentence below — like “Payment amount: $200.”
-    Now change it to “$220.”
-  </p>
+  <!-- Simple demo tip -->
+  <div class="card" style="border-left:6px solid var(--blue);">
+    <strong>The simplest way to understand NOVAK:</strong>
+    <p style="margin-top:10px; font-size:15px; line-height:1.55;">
+      Type a sentence below — like “Payment amount: $200.”
+      Now change it to “$220.”
+    </p>
 
-  <p style="margin-top:10px; font-size:15px; line-height:1.55;">
-    Every fingerprint changes instantly. NOVAK sees <strong>even a one-character change</strong>.
-    That’s how tampering, fraud, or system errors become impossible to hide.
-  </p>
-</div>
- 
+    <p style="margin-top:10px; font-size:15px; line-height:1.55;">
+      Every fingerprint changes instantly. NOVAK sees <strong>even a one-character change</strong>.
+      That’s how tampering, fraud, or system errors become impossible to hide.
+    </p>
+  </div>
+
   <!-- INSTRUCTION BANNER (hidden until clicked) -->
   <div id="instructionBanner" class="card">
     <strong>How to use this demo:</strong>
@@ -327,12 +428,12 @@ textarea{
     <button class="action-btn" onclick="toggleCompareMode()" id="compareBtn">Start Before/After Capture</button>
   </div>
 
-    <!-- HASH OUTPUT -->
+  <!-- HASH OUTPUT -->
   <div class="card">
     <h3 id="hashHeader">Integrity Fingerprints</h3>
     <p style="font-size:13px;margin-bottom:6px;">All supported hashes are shown. Select which one to treat as primary.</p>
 
-    <div id="hashes"></div>
+    <div id="hashes" class="hash-list"></div>
 
     <p style="font-size:13px;margin-top:8px;">
       Primary Hash for certificate:
@@ -452,12 +553,11 @@ textarea{
 
 </div> <!-- END CONTAINER -->
 
-  <script>
+<script>
 /* DOM references */
 const input = document.getElementById("input");
 const hashesDiv = document.getElementById("hashes");
 const rgacDiv = document.getElementById("rgac");
-const timeline = document.getElementById("timeline");
 const dropzone = document.getElementById("dropzone");
 const primaryLabel = document.getElementById("primaryLabel");
 const comparisonBox = document.getElementById("comparison");
@@ -498,6 +598,13 @@ function setAudience(a){
   document.getElementById("timelineHeader").innerText = audienceText[a].timeline;
   document.querySelectorAll(".nav button").forEach(btn=>btn.classList.remove("active"));
   document.getElementById(`btn-${a}`).classList.add("active");
+}
+
+/* Super simple explainer toggle */
+function toggleSimpleExplain(){
+  const box = document.getElementById("simpleExplain");
+  const now = box.style.display === "block";
+  box.style.display = now ? "none" : "block";
 }
 
 /* Show onboarding banner */
@@ -587,7 +694,7 @@ async function compute(){
   primaryLabel.innerText = primaryHash;
 
   updateRGAC(lastHashes[primaryHash]);
-  addTimeline("Hashes updated");
+  addTimeline("Integrity fingerprints updated");
 }
 
 /* Primary hash selector */
@@ -606,10 +713,11 @@ function updateRGAC(hash){
   rgacDiv.innerHTML = rgacBlocks.map(h=>`<div class="block">${h}</div>`).join("");
 }
 
-/* Timeline logger */
+/* Timeline logger (fixed to use proofHistory) */
 function addTimeline(msg){
-  timeline.innerText += `[${new Date().toLocaleTimeString()}] ${msg}\n`;
-  timeline.scrollTop = timeline.scrollHeight;
+  const box = document.getElementById("proofHistory");
+  box.textContent += `[${new Date().toLocaleTimeString()}] ${msg}\n`;
+  box.scrollTop = box.scrollHeight;
 }
 
 /* Live hash recompute */
@@ -806,5 +914,3 @@ compute();
 </script>
 </body>
 </html>
-
-
