--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ html[data-theme="dark"] .history-box{
   <div class="card" style="border-left:6px solid var(--blue);">
     <strong>The simplest way to understand NOVAK:</strong>
     <p style="margin-top:10px; font-size:15px; line-height:1.55;">
-      Type a sentence below — like “Payment amount: $200.”
+      Type a sentence below the example datasets — like “Payment amount: $200.”
       Now change it to “$220.”
     </p>
 
