--- a/index.html
+++ b/index.html
@@ -586,6 +586,11 @@ html[data-theme="dark"] .history-box{
   <div class="footer" style="margin-top:36px;font-size:12px;text-align:center;opacity:.75;">
     NOVAK Protocol — Patent Pending © 2025. Demonstration only — no stored or transmitted data.
   </div>
+  <button onclick="localStorage.removeItem('hideWhyNovak'); location.reload();"
+        style="font-size:12px; margin-top:12px;">
+  Show Why NOVAK Again
+</button>
+
 
 </div> <!-- END CONTAINER -->
 
