--- a/index.html
+++ b/index.html
@@ -293,12 +293,13 @@ html[data-theme="dark"] .history-box{
 <body>
 <div class="container">
 
+<!-- HEADER -->
 <div class="header">
   <div class="logo">NOVAK Protocol</div>
   <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
 </div>
 
-<!-- Audience selector now BELOW the title -->
+<!-- AUDIENCE SELECTOR — stays BELOW header -->
 <div class="nav">
   <button onclick="setAudience('public')" class="active" id="btn-public">Public</button>
   <button onclick="setAudience('government')" id="btn-government">Government</button>
@@ -307,8 +308,6 @@ html[data-theme="dark"] .history-box{
   <button onclick="setAudience('academic')" id="btn-academic">Academic</button>
 </div>
 
-  <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
-</div>
 
 
 <!-- WHY NOVAK -->
